--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2'
 
 services:
   nginx-proxy:
@@ -9,14 +9,16 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - certs:/etc/nginx/certs:ro
+      - ./certs:/etc/nginx/certs:ro
       - /etc/nginx/vhost.d
       - /usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
   letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
+    volumes_from:
+      - nginx-proxy
     volumes:
-      - certs:/etc/nginx/certs:rw
+      - ./certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
   whoami:
     image: jwilder/whoami
@@ -24,9 +26,3 @@ services:
       - VIRTUAL_HOST=whoami.local
       - LETSENCRYPT_HOST=whoami.local,www.whoami.local,mail.whoami.local
       - LETSENCRYPT_EMAIL=contact@whoami.local
-
-volumes:
-  certs:
-    driver: local-persist
-    driver_opts:
-      mountpoint: ./certs
